monticore-generator/src/test/resources/cocos/invalid/A0117/A0117a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0117;

grammar A0117a {

  A;

  symbolrule A =
    isBla: boolean;

}
